--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
-  background-image: url("./sunset-1373171_1920.jpg")
+  background-image: url("./sunset-1373171_1920.jpg");
 }
 
 h1 {
-  background-color: orange
+  background-image: url("./sunset-1373171_1920.jpg");
 }
